--- a/src/app/components/todo-details/todo-details.component.html
+++ b/src/app/components/todo-details/todo-details.component.html
@@ -6,6 +6,51 @@
     </mat-card-header>
     <mat-card-content>
       <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+        <div id="contact-container">
+          <mat-form-field class="w-60">
+            <mat-label>Membre</mat-label>
+
+            <mat-chip-grid #chipGrid aria-label="Fruit selection">
+              @for (fruit of selectedFruits; track fruit.id) {
+              <mat-chip-row (removed)="remove(fruit.id)">
+                {{ fruit.nom }}
+                <button matChipRemove [attr.aria-label]="'remove ' + fruit.nom">
+                  <mat-icon>cancel</mat-icon>
+                </button>
+              </mat-chip-row>
+              }
+            </mat-chip-grid>
+
+            <input
+              name="currentFruit"
+              placeholder="New Fruit..."
+              #fruitInput
+              [formControl]="currentFruit"
+              [matChipInputFor]="chipGrid"
+              [matAutocomplete]="auto"
+              (input)="onCurrentFruitChange(fruitInput.value)"
+            />
+
+            <mat-autocomplete
+              #auto="matAutocomplete"
+              (optionSelected)="selected($event)"
+            >
+              @for (fruit of filteredFruits; track fruit.id) {
+              <mat-option [value]="fruit.id">{{ fruit.nom }}</mat-option>
+              }
+            </mat-autocomplete>
+          </mat-form-field>
+        </div>
+        <div id="pojet-container">
+          <mat-form-field class="w-60">
+            <mat-label>Projet</mat-label>
+            <mat-select formControlName="projetId">
+              @for (item of projet; track item){
+              <mat-option [value]="item.id">{{ item.title }}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+        </div>
         <div id="title-container">
           <mat-form-field class="w-60">
             <mat-label>Title</mat-label>
@@ -23,31 +68,47 @@
           <mat-form-field class="w-60">
             <mat-label>Description</mat-label>
             <!-- formControlName = 1er parametre de updateForm -->
-             <textarea [value]="todo.description" formControlName="description" matInput placeholder="Ex. It makes me feel..."></textarea>
+            <textarea
+              [value]="todo.description"
+              formControlName="description"
+              matInput
+              placeholder="Ex. It makes me feel..."
+            ></textarea>
           </mat-form-field>
         </div>
         <div id="priority-container">
           <mat-form-field class="w-60">
             <mat-label>Priority</mat-label>
-            <mat-select formControlName="priority">
-                @for (item of priority; track item){
-                    <mat-option [value]="item.value">{{item.text}}</mat-option>
-                }
+            <mat-select formControlName="priorite">
+              @for (item of priority; track item){
+              <mat-option [value]="item.value">{{ item.text }}</mat-option>
+              }
             </mat-select>
           </mat-form-field>
         </div>
         <div id="date-container">
           <mat-form-field class="w-60">
             <mat-label>Date</mat-label>
-            <input matInput  [matDatepicker]="picker" formControlName="dueDate" [value]="todo.dueDate"/>
+            <input
+              matInput
+              [matDatepicker]="picker"
+              formControlName="dueDate"
+              [value]="todo.dueDate"
+            />
             <mat-hint>MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker> 
+            <mat-datepicker-toggle
+              matIconSuffix
+              [for]="picker"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
         </div>
         <div id="complete-container">
           <section class="my-3 mx-0">
-            <mat-checkbox [checked]="todo.completed" class="m-0" formControlName="completed"
+            <mat-checkbox
+              [checked]="todo.completed"
+              class="m-0"
+              formControlName="completed"
               >Completed</mat-checkbox
             >
           </section>
