--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
 >
   <div id="centered-block" class="bg-white max-w-sm p-6 rounded-xl shadow-md">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <h2 class="text-center">Connexion</h2>
+      <h2 class="text-center">Connexion ou <a routerLink="/sign-up">Sign Up</a></h2>
       <div id="email-container">
         <mat-form-field>
           <mat-label>Email</mat-label>
